[tool.poetry]
name = "extractbcu"
version = "0.1.0"
description = ""
authors = ["Mike Lu <mcumaple@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.10.0"
openpyxl = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
